Profile picture updated

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="row align-items-center">
           <div class="col-md-4 text-center mt-5">
             <img
-              src="Salman Picture 1.jpg"
+              src="Salman Picture.jpg"
               alt="Salman Shah"
               class="profile-img"
             />
